# tinymodbus

./: .clang-format  .editorconfig  CMakeLists.txt  LICENSE  README.md  tinymodbus.h
.github/workflows/: test.yaml
cmake/: cmocka.cmake
examples/: CMakeLists.txt  example_posix.c  example_posix_tcpip.c
tests/: CMakeLists.txt  example_test.c
